--- a/src/styles/section.css
+++ b/src/styles/section.css
@@ -1,6 +1,8 @@
 .explorer-section {
-  margin-bottom: 2rem;
   background: var(--background-white);
+  padding: 1rem 2rem;
+  border-bottom: 1px solid var(--border-color);
+  margin-bottom: 2rem;
   border-radius: 8px;
   box-shadow: 0 2px 4px var(--shadow-color);
   overflow: hidden;
@@ -69,4 +71,8 @@
   box-shadow: none;
   padding: 0;
   margin: 0;
+}
+
+.content-subtitle {
+  text-align: center;
 }
