--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -2,7 +2,6 @@
 .login-form-container {
   max-width: 400px;
   margin: 0 auto;
-  padding: 2rem;
   width: 100%;
 }
 
@@ -34,6 +33,7 @@
   font-size: 1rem;
   cursor: pointer;
   transition: background-color 0.3s;
+  width: 100%
 }
 
 .login-action-button:hover {
