changed admin features

--- a/src/styles/cameraroll.css
+++ b/src/styles/cameraroll.css
@@ -1,4 +1,4 @@
-/* Pictures Component */
+/* Camera Roll Component */
 .camerarollimage-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
