--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,1 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-body {
-  background-color: rgba(15, 23, 42, 0.95);
-}
+@import "tailwindcss";
