--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,9 @@
 @import "tailwindcss";
 
 body {
-  background-color: transparent;
   position: relative;
   min-height: 100vh;
+  background-color: #0f172a;
 }
 
 body::before {
@@ -20,5 +20,5 @@ body::before {
   background-position: center;
   background-repeat: no-repeat;
 
-  background-color: #f0f9ff;
+  background-color: #0f172a;
 }
