--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,3 +22,14 @@ body::before {
 
   background-color: #0f172a;
 }
+
+@layer utilities {
+  .scrollbar-none::-webkit-scrollbar {
+    display: none;
+  }
+
+  .scrollbar-none {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+}
